<resources>
    <string name="gmp_key">AIzaSyB1aqlLitAyBI5Ehr6eDbPTTHQOxvzvWrY</string>
    <string name="maps_key">AIzaSyB1aqlLitAyBI5Ehr6eDbPTTHQOxvzvWrY</string>
    <string name="required">*Requerido</string>
    <string name="email">Correo</string>
    <string name="register">Registrar</string>
    <string name="login">Acceder</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="password">Contraseña</string>
    <string name="provider">Proveedor</string>
    <string name="app_name">BuscandoHuellas</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_find">Find</string>
    <string name="title_report">Report</string>
    <string name="title_mypets">My pets</string>
    <string name="nombre_mascota">Nombre de la mascota</string>
    <string name="detalles_apariencia">Detalles de apariencia</string>
    <string name="detalles_salud">Detalles de salud</string>
    <string name="comportamiento">Comportamiento</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad de la mascota</string>
    <string name="sexo">Sexo</string>
    <string name="raza">Raza</string>
    <string name="tamano">Tamaño</string>
    <string name="color">Color</string>
    <string name="contacto">Contacto</string>
    <string name="imagen">Subir foto de perro</string>
    <string name="reportar">Reportar perro perdido</string>
    <string name="avistamiento">Reportar avistamiento de un perro</string>
    <string name="pista_busqueda">Buscar…</string>
    <string name="titulo_ubicacion">¿Dónde y cuándo se vió por ultima vez?</string>
    <string name="lugar_avistamiento">Selecciona el lugar</string>
    <string name="fecha_avistamiento">Última fecha de avistamiento</string>
    <string name="detalles_ubicacion">Detalles de ubicación</string>
    <string-array name="lista_sexo">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>
    <string-array name="lista_tamaño">
        <item>Miniatura(&lt; 5kg)</item>
        <item>Pequeño(5–10kg)</item>
        <item>Mediano(10–26kg)</item>
        <item>Grande(26–45kg)</item>
        <item>Gigante(&gt;45kg)</item>
    </string-array>
    <string-array name="lista_color">
        <item>Negro</item>
        <item>Café oscuro</item>
        <item>Café claro</item>
        <item>Café rojizo</item>
        <item>Blanco</item>
        <item>Gris claro</item>
        <item>Gris oscuro</item>
        <item>Amarillo pálido</item>
        <item>Beige</item>
    </string-array>
    <string-array name="lista_edad">
        <item>Cachorro</item>
        <item>Adolescente</item>
        <item>Adulto</item>
        <item>Senior</item>
    </string-array>
    <string-array name="lista_comportamiento">
        <item>Manso</item>
        <item>Agresivo</item>
        <item>Temeroso</item>
    </string-array>
</resources>