<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/k_darkblue"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/textView_proveedor"
        app:layout_constraintStart_toStartOf="@+id/textView_proveedor"
        app:layout_constraintTop_toBottomOf="@+id/textView_proveedor" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView_proveedor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/provider"
        app:layout_constraintEnd_toEndOf="@+id/textView_email"
        app:layout_constraintStart_toStartOf="@+id/textView_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_email"
        app:layout_constraintWidth_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>