<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:importantForAutofill="noExcludeDescendants">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.report.ReportFragment">

        <EditText
            android:maxLength="25"
            android:id="@+id/nombreMascota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/nombre_mascota"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".80" />

        <TextView
            android:id="@+id/ss_raza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:minHeight="48dp"
            android:background="@android:drawable/editbox_background"
            android:gravity="center_vertical"
            android:hint="@string/raza"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:drawableEndCompat="@drawable/ic_expand"
            app:layout_constraintEnd_toEndOf="@id/nombreMascota"
            app:layout_constraintStart_toStartOf="@id/nombreMascota"
            app:layout_constraintTop_toBottomOf="@id/nombreMascota"
            app:layout_constraintWidth_percent=".80" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_sexo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/sexo"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/k_background"
            app:boxStrokeColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/ss_raza"
            app:layout_constraintStart_toStartOf="@+id/ss_raza"
            app:layout_constraintTop_toBottomOf="@+id/ss_raza"
            app:layout_constraintWidth_percent="0.8">

            <AutoCompleteTextView
                android:id="@+id/filled_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_tamano"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/tamano"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/k_background"
            app:boxStrokeColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/spinner_sexo"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="@+id/spinner_sexo"
            app:layout_constraintTop_toBottomOf="@+id/spinner_sexo"
            app:layout_constraintWidth_percent="0.8">

            <AutoCompleteTextView
                android:id="@+id/filled_tamano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/color"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/k_background"
            app:boxStrokeColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/spinner_tamano"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="@+id/spinner_tamano"
            app:layout_constraintTop_toBottomOf="@+id/spinner_tamano"
            app:layout_constraintWidth_percent="0.8">

            <AutoCompleteTextView
                android:id="@+id/filled_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_edad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/edad"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/k_background"
            app:boxStrokeColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/spinner_color"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="@+id/spinner_color"
            app:layout_constraintTop_toBottomOf="@+id/spinner_color"
            app:layout_constraintWidth_percent="0.8">

            <AutoCompleteTextView
                android:id="@+id/filled_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/detalles_apariencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/detalles_apariencia"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:maxLength="200"
            app:layout_constraintEnd_toEndOf="@+id/spinner_edad"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner_edad"
            app:layout_constraintTop_toBottomOf="@+id/spinner_edad"
            app:layout_constraintWidth_percent=".80" />

        <EditText
            android:id="@+id/detalles_salud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/detalles_salud"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:maxLength="200"
            app:layout_constraintEnd_toEndOf="@+id/detalles_apariencia"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/detalles_apariencia"
            app:layout_constraintTop_toBottomOf="@+id/detalles_apariencia"
            app:layout_constraintWidth_percent=".80" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_comportamiento"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/comportamiento"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/k_background"
            app:boxStrokeColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/detalles_salud"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="@+id/detalles_salud"
            app:layout_constraintTop_toBottomOf="@+id/detalles_salud"
            app:layout_constraintWidth_percent="0.8">

            <AutoCompleteTextView
                android:id="@+id/filled_comportamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/dogImage"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/imagen"
            app:layout_constraintEnd_toEndOf="@+id/spinner_comportamiento"
            app:layout_constraintStart_toStartOf="@+id/spinner_comportamiento"
            app:layout_constraintTop_toBottomOf="@+id/selecciona_img"
            app:srcCompat="@drawable/dog_silhouette" />

        <EditText
            android:id="@+id/contacto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/contacto"
            android:inputType="text"
            android:maxLength="10"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="@+id/dogImage"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="@+id/dogImage"
            app:layout_constraintTop_toBottomOf="@+id/dogImage"
            app:layout_constraintWidth_percent=".80" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegistraMascotaBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@color/k_darkblue"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/contacto"
            app:layout_constraintStart_toStartOf="@+id/contacto"
            app:layout_constraintTop_toBottomOf="@+id/contacto" />

        <TextView
            android:id="@+id/selecciona_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".80"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:text="Selecciona una imágen (&lt;2MB) clara y de preferencia cuadrada"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/spinner_comportamiento"
            app:layout_constraintStart_toStartOf="@+id/spinner_comportamiento"
            app:layout_constraintTop_toBottomOf="@+id/spinner_comportamiento" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

